Rajoute image main

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
     <main>
         <section id="section1">
             <div id="divSection1">
-                <div>
-                    <hr>
-                    <h1>ABOUT US</h1>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus</p>
-                <a href="#" class="button_green">Contact us!</a>
+                <article>
+                    <div>
+                        <hr>
+                        <h1>ABOUT US</h1>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus</p>
+                    <a href="#" class="button_green">Contact us!</a>
+                </article>
+                <img src="/img/image1.png" alt="img">
             </div>
         </section>
         <section id="section2">
